--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -20,10 +20,10 @@
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright 2015&copy; <a href="http://alienlynx.com/">AlienLynx</a> All Rights Reserved</p>
             </div>
             <div class="col-md-4">
-                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
+                Made By <a href="mailto:zhe@alienlynx.com">Zhe Li</a> with Love
             </div>
         </div>
     </div>
