--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ page.title }}</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+	<head>
 
-    <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+	    <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
 
-    <!-- build:css(app) /css/main.css -->
-    <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="/css/syntax.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <!-- endbuild -->
+	    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-    <!-- build:js(app) /js/head-scripts.js -->
-    <!-- Replace with a custom modernizer build for production -->
-    <script src="/_bower_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
+	    <!-- build:css(app) /css/main.css -->
+	    <link rel="stylesheet" href="/_bower_components/bootstrap/dist/css/bootstrap.min.css">
+	    <!--<link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">-->
+	    <!--<link rel="stylesheet" href="/css/syntax.css">-->
+	    <!--<link rel="stylesheet" href="/css/main.css">-->
+	    <link rel="stylesheet" href="/_bower_components/font-awesome/css/font-awesome.min.css" type="text/css"><!-- Custom Fonts -->
+	    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" type="text/css">
+	    <link rel="stylesheet" href="css/landing-page.css"><!-- Custom CSS -->
+	    <!-- endbuild -->
 
-  </head>
-  <body>
-    <!--[if lt IE 8]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	    <!--[if lt IE 9]>
+	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	    <![endif]-->
 
-    {{ content }}
+	    <!-- build:js(app) /js/head-scripts.js -->
+	    <!-- Replace with a custom modernizer build for production -->
+	    <script src="/_bower_components/modernizr/modernizr.js"></script>
+		<script src="/_bower_components/jquery/dist/jquery.js"></script> <!-- jQuery Version 1.11.0 -->
+		<script src="/_bower_components/bootstrap/dist/js/bootstrap.min.js"></script> <!-- Bootstrap Core JavaScript -->	    
+	    <!-- endbuild -->
+	</head>
 
-    {% include scripts.html %}
-    {% include googleanalytics.html %}
-
-  </body>
+	<body>
+		{% include header.html %}
+		{% include page_content.html %}
+		{% include contact.html %}
+		{% include footer.html %}
+		{% include scripts.html %}
+    	{% include googleanalytics.html %}		
+	</body>
 </html>
