--- a/app/_includes/page_content.html
+++ b/app/_includes/page_content.html
@@ -1,3 +1,57 @@
+<div class="content-section-a">
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-5 col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">Add User to New Subscription</h2>
+
+            </div>
+            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div role="tabpanel">
+
+                  <!-- Nav tabs -->
+                  <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#python" aria-controls="python" role="tab" data-toggle="tab">Python</a></li>
+                    <li role="presentation"><a href="#curl" aria-controls="curl" role="tab" data-toggle="tab">Curl</a></li>
+                    <li role="presentation"><a href="#ruby" aria-controls="ruby" role="tab" data-toggle="tab">Ruby</a></li>
+                    <li role="presentation"><a href="#php" aria-controls="php" role="tab" data-toggle="tab">PHP</a></li>
+                  </ul>
+
+                  <!-- Tab panes -->
+                  <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="python">
+                        <p>
+                        <pre>
+import basgy
+
+c = basgy.BasgyClient(api_id="001", api_key="123")
+standard_sub=c.add_new_subscription(
+    name="Standard",
+    price=100,
+    currency="USD")
+standard_sub.add_user(user_ticket_id="123")
+                        </pre>
+                    </p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane active" id="curl">
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="ruby">TBD</div>
+                    <div role="tabpanel" class="tab-pane" id="php">TBD</div>
+                  </div>
+
+                </div>   
+                <!--<img class="img-responsive" src="img/services/{{ post.img }}" alt="">-->
+            </div>
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+</div>
+
 <!-- Page Content -->
 {% for post in site.posts reversed %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
