--- a/app/_includes/contact.html
+++ b/app/_includes/contact.html
@@ -3,17 +3,13 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-6">
-                <h2>Connect to Start Bootstrap:</h2>
+            <div class="col-lg-7 col-lg-offset-1">
+                <h2>Sounds cool? Ask for an invite!</h2>
             </div>
-            <div class="col-lg-6">
-                <ul class="list-inline banner-social-buttons">
-                    {% for social in site.social %}
-                    <li>
-                        <a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-                    </li>
-                    {% endfor %}
-                </ul>
+            <div class="col-lg-1">
+                <a href="http://www.google.com">
+                    <button type="button" class="btn btn-success btn-lg"> <i class="fa fa-thumbs-up"></i> I want early access.</button>
+                </a>
             </div>
         </div>
 
