--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -7,6 +7,7 @@
                     <li>
                         <a href="#home">Home</a>
                     </li>
+                    <!--
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="#about">About</a>
@@ -19,11 +20,10 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    -->
                 </ul>
                 <p class="copyright text-muted small">Copyright 2015&copy; <a href="http://alienlynx.com/">AlienLynx</a> All Rights Reserved</p>
-            </div>
-            <div class="col-md-4">
-                Made By <a href="mailto:zhe@alienlynx.com">Zhe Li</a> with Love
+                <p class="text-muted small">Made By <a href="mailto:zhe@alienlynx.com">Zhe Li</a> with <i class="fa fa-heart"></i></p>
             </div>
         </div>
     </div>
