--- a/app/_includes/page_content.html
+++ b/app/_includes/page_content.html
@@ -1,133 +1,35 @@
 <div class="content-section-a">
-
     <div class="container">
-
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-1 col-sm-6">
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <h2 class="section-heading">Developer-friendly!</h2>
-                Here is our super simple SDK!
-            </div>
-            <div class="col-lg-6 col-lg-offset-1 col-sm-6">
-                <div role="tabpanel">
-
-                  <!-- Nav tabs -->
-                  <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#python" aria-controls="python" role="tab" data-toggle="tab">Python</a></li>
-                    <li role="presentation"><a href="#curl" aria-controls="curl" role="tab" data-toggle="tab">Curl</a></li>
-                    <li role="presentation"><a href="#ruby" aria-controls="ruby" role="tab" data-toggle="tab">Ruby</a></li>
-                    <li role="presentation"><a href="#php" aria-controls="php" role="tab" data-toggle="tab">PHP</a></li>
-                  </ul>
-
-                  <!-- Tab panes -->
-                  <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="python">
-                        <p>
-                        <pre>
-import basgy
-
-c = basgy.BasgyClient(api_key='test123')
-standard_sub=c.add_new_subscription(
-    name='Standard',
-    price=100,
-    currency='USD',
-    charge_day=25)
-standard_sub.add_user(user_ticket_id='123')
-                        </pre>
-                    </p>
-                    </div>
-                    <div role="tabpanel" class="tab-pane" id="curl">
-                        <pre>
-curl https://api.getbagsy.com/v1/customers \
-   -u test123: \
-   -d ticket_id=123 \
-   -d plan=Standard             
-                        </pre>           
-                    </div>
-                    <div role="tabpanel" class="tab-pane" id="ruby">TBD</div>
-                    <div role="tabpanel" class="tab-pane" id="php">TBD</div>
-                  </div>
-
-                </div>   
-            </div>
-        </div>
-
+        {% include code_demo.html %}
     </div>
     <!-- /.container -->
-
 </div>
 <!-- /.content-section-a -->
 
 <div class="content-section-b">
 
     <div class="container">
-
-        <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <h2 class="section-heading">Manager-friendly</h2>
-                Find out what happens to your revenue.
-            </div>
-            <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-              <img class="img-responsive" src="img/services/dog.png" alt="">
-            </div>
-        </div>
-
+        {% include admin_demo.html %}
     </div>
     <!-- /.container -->
 
 </div>
 <!-- /.content-section-b -->
 
-<!-- Page Content -->
-{% for post in site.posts reversed %}
-  {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-    {% if thecycle == 'odd' %}
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">{{ post.title }}</h2>
-                    {{ post.description }}
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
+<div class="content-section-a">
+    <div class="container">
+        {% include invoice_demo.html %}
     </div>
-    <!-- /.content-section-a -->
-    {% else %}
+    <!-- /.container -->
+</div>
+<!-- /.content-section-a -->
 
-    <div class="content-section-b">
+<div class="content-section-b">
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">{{ post.title }}</h2>
-                    {{ post.description }}
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                  <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
+    <div class="container">
+        {% include pricing.html %}
     </div>
-    <!-- /.content-section-b -->
-    {% endif %}
-{% endfor %}
+    <!-- /.container -->
+
+</div>
+<!-- /.content-section-b -->
