--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -18,6 +18,7 @@
 	    <link rel="stylesheet" href="/_bower_components/font-awesome/css/font-awesome.min.css" type="text/css"><!-- Custom Fonts -->
 	    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" type="text/css">
 	    <link rel="stylesheet" href="css/landing-page.css"><!-- Custom CSS -->
+	    <link rel="stylesheet" href="css/pricing.css"><!-- Pricing CSS -->	    
 	    <!-- endbuild -->
 
 	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
