added a new logo for the site

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -2,12 +2,12 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-md-offset-4">
+                <!--
                 <ul class="list-inline">
                     <li>
                         <a href="#home">Home</a>
                     </li>
-                    <!--
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="#about">About</a>
@@ -20,10 +20,9 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
-                    -->
                 </ul>
-                <p class="copyright text-muted small">Copyright 2015&copy; <a href="http://alienlynx.com/">AlienLynx</a> All Rights Reserved</p>
-                <p class="text-muted small">Made By <a href="mailto:zhe@alienlynx.com">Zhe Li</a> with <i class="fa fa-heart"></i></p>
+                -->
+                <p class="copyright text-muted small">Copyright 2015&copy; <a href="http://alienlynx.com/">AlienLynx</a> All Rights Reserved.</p>
             </div>
         </div>
     </div>
