--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{ site.title }}</a>
+            <div class="logo">
+                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="{{ site.title }}"></img></a>
+            </div>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <!--
