--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -21,6 +21,11 @@ h6 {
     font-weight: 700;
 }
 
+.logo {
+    display:block;
+    height:30px;
+}
+
 .lead {
     font-size: 18px;
     font-weight: 400;
