Added more information into plans

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-4">
+            <div class="col-md-4 col-md-offset-4">
                 <!--
                 <ul class="list-inline">
                     <li>
@@ -22,7 +22,7 @@
                     </li>
                 </ul>
                 -->
-                <p class="copyright text-muted small">Copyright 2015&copy; <a href="http://alienlynx.com/">AlienLynx</a> All Rights Reserved.</p>
+                <span class="copyright text-muted small">Copyright 2015&copy; GetBagsy All Rights Reserved.</span>
             </div>
         </div>
     </div>
