--- a/app/_includes/pricing.html
+++ b/app/_includes/pricing.html
@@ -13,11 +13,14 @@
 						<li class="price"><p>$149/<span>month</span></p></li>
 						<li>
 							<ul class="options">
-								<li>1000 <span>customers</span></li>
-								<li>Premium support</li>
+								<li>1000 <span>Customers</span></li>
+								<li>∞ <span>Team Members</span></li>
+								<li>∞ <span>Digital Invoice</span></li>
+								<li><span>Monthly Email Reports</span></li>
+								<li>Email & Phone Support</li>
 							</ul>
 						</li>
-					    <li class="button"><a class="bestPlanButton" href="#">Popular</a></li>
+						<li class="button"><a href="#">Sign Up</a></li>
 					</ul>
 				</li>				
 				<li class="plan">
@@ -27,6 +30,9 @@
 						<li>
 							<ul class="options">
 								<li>200 <span>customers</span></li>
+								<li>∞ <span>Team Members</span></li>
+								<li>∞ <span>Digital Invoice</span></li>
+								<li><span>Monthly Email Reports</span></li>
 								<li>Email support</li>
 								<li class="button"><a href="#">Sign Up</a></li>
 							</ul>
@@ -40,7 +46,10 @@
 						<li>
 							<ul class="options">
 								<li>50 <span>customers</span></li>
+								<li>∞ <span>Team Members</span></li>
+								<li><span>Monthly Email Reports</span></li>
 								<li>Email support</li>
+								<li>&nbsp; </li>
 								<li class="button"><a href="#">Apply</a></li>
 							</ul>
 						</li>
