Added sign up form and mail link

--- a/app/_includes/pricing.html
+++ b/app/_includes/pricing.html
@@ -20,7 +20,7 @@
 								<li>Email & Phone Support</li>
 							</ul>
 						</li>
-						<li class="button"><a href="#">Sign Up</a></li>
+						<li class="button"><a href="http://eepurl.com/bhSugf">Sign Up</a></li>
 					</ul>
 				</li>				
 				<li class="plan">
@@ -34,7 +34,7 @@
 								<li>∞ <span>Digital Invoice</span></li>
 								<li><span>Monthly Email Reports</span></li>
 								<li>Email support</li>
-								<li class="button"><a href="#">Sign Up</a></li>
+								<li class="button"><a href="http://eepurl.com/bhSugf">Sign Up</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -50,7 +50,7 @@
 								<li><span>Monthly Email Reports</span></li>
 								<li>Email support</li>
 								<li>&nbsp; </li>
-								<li class="button"><a href="#">Apply</a></li>
+								<li class="button"><a href="mailto:zhe@alienlynx.com">Apply</a></li>
 							</ul>
 						</li>
 					</ul>
