--- a/app/_includes/contact.html
+++ b/app/_includes/contact.html
@@ -1,18 +1,16 @@
 <div class="banner">
 
     <div class="container">
-<!--
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-1">
-                <h2>Sounds cool? Ask for an invite!</h2>
+            <div class="col-lg-4 col-lg-offset-3">
+                <h2>More questions?</h2>
             </div>
             <div class="col-lg-1">
-                <a href="http://www.google.com">
-                    <button type="button" class="btn btn-success btn-lg"> <i class="fa fa-thumbs-up"></i> I want early access.</button>
+                <a href="mailto:zhe@alienlynx.com">
+                    <button type="button" class="btn btn-success btn-lg"> <i class="fa fa-thumbs-up"></i> Contact Us</button>
                 </a>
             </div>
         </div>
--->
     </div>
     <!-- /.container -->
 
