Using new email address

--- a/app/_includes/pricing.html
+++ b/app/_includes/pricing.html
@@ -50,7 +50,7 @@
 								<li><span>Monthly Email Reports</span></li>
 								<li>Email support</li>
 								<li>&nbsp; </li>
-								<li class="button"><a href="mailto:zhe@alienlynx.com">Apply</a></li>
+								<li class="button"><a href="mailto:zhe@getbagsy.com">Apply</a></li>
 							</ul>
 						</li>
 					</ul>
