--- a/app/_includes/contact.html
+++ b/app/_includes/contact.html
@@ -6,7 +6,7 @@
                 <h2>More questions?</h2>
             </div>
             <div class="col-lg-1">
-                <a href="mailto:zhe@alienlynx.com">
+                <a href="mailto:zhe@getbagsy.com">
                     <button type="button" class="btn btn-success btn-lg"> <i class="fa fa-thumbs-up"></i> Contact Us</button>
                 </a>
             </div>
