--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -9,9 +9,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div class="logo">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="{{ site.title }}"></img></a>
-            </div>
+            <a class="navbar-brand logo" href="#">
+                <img src="/img/logo.png">
+                <h2>BAGSY</h2>
+            </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <!--
