--- a/app/css/landing-page.css
+++ b/app/css/landing-page.css
@@ -20,10 +20,19 @@ h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
-
 .logo {
-    display:block;
-    height:30px;
+    margin-top: -28px;
+}
+.logo > img {
+    display: inline-block;
+    margin-top: -10px;    
+}
+.logo > h2 {
+    display:inline-block;
+}
+
+.logo-text {
+    display:inline-block;
 }
 
 .lead {
